Switch to named and custom colours stylesheets

--- a/app/assets/stylesheets/tenon/tenon.css.scss
+++ b/app/assets/stylesheets/tenon/tenon.css.scss
@@ -18,7 +18,8 @@
 @import "tenon/mixins";
 
 // universal variables
-@import "tenon/colors";
+@import "tenon/colors-named";
+@import "tenon/colors-custom";
 @import "tenon/typography";
 @import "tenon/helpers";
 @import "tenon/styleguide";
