--- a/app/views/tenon/shared/_breadcrumb.html.haml
+++ b/app/views/tenon/shared/_breadcrumb.html.haml
@@ -3,4 +3,4 @@
   - unless ['tenon/index', 'tenon/settings'].include?(controller_path)
     %li= link_to display_controller(controller_path), url_for(:controller => controller_path, :action => 'index')
   - unless %w{show index}.include? action_name
-    %li.active= link_to display_action(action_name), url_for
+    %li.active= link_to display_action(action_name), url_for(:controller => controller_path, :action => action_name)
