--- a/app/views/tenon/pages/_form.html.haml
+++ b/app/views/tenon/pages/_form.html.haml
@@ -44,4 +44,4 @@
       - if @page.persisted?
         %hr
         .content
-          = link_to "Delete", [:tenon, @page], :data => {:method => :delete, :confirm => "Are you sure you want to delete this?"}, :class => 'delete-link'
+          = link_to "Delete", @page, :data => {:method => :delete, :confirm => "Are you sure you want to delete this?"}, :class => 'delete-link'
