--- a/app/views/tenon/tenon_callouts/_form.html.haml
+++ b/app/views/tenon/tenon_callouts/_form.html.haml
@@ -39,7 +39,7 @@
       - if @tenon_callout.persisted?
         %hr
         .content
-          = link_to "Delete", [:tenon, @tenon_callout], data: {method: :delete, confirm: 'Are you sure you want to delete this?'}, :class => 'delete-link'
+          = link_to "Delete", @tenon_callout, data: {method: :delete, confirm: 'Are you sure you want to delete this?'}, :class => 'delete-link'
 
 
 
