--- a/app/views/tenon/tenon_content/_row.html.haml
+++ b/app/views/tenon/tenon_content/_row.html.haml
@@ -4,11 +4,11 @@
     .actions
       %i.fa.fa-arrows.drag-anchor
 
-      = link_to '#', class: 'tn-tc-open-library above', 'data-modal-target' => '.tenon-library', 'data-modal-title' => "Add Row Above", 'data-modal-handler' => 'Tenon.features.tenonContent.Library' do
+      = link_to '#', class: 'tn-tc-open-library above', 'data-modal-target' => '.tenon-library', 'data-modal-title' => "Add Content Above", 'data-modal-handler' => 'Tenon.features.tenonContent.Library', 'data-modal-clone' => 'true' do
         = fa_icon('plus-circle')
         %span Above
 
-      = link_to '#', class: 'tn-tc-open-library below', 'data-modal-target' => '.tenon-library', 'data-modal-title' => "Add Row Below", 'data-modal-handler' => 'Tenon.features.tenonContent.Library' do
+      = link_to '#', class: 'tn-tc-open-library below', 'data-modal-target' => '.tenon-library', 'data-modal-title' => "Add Content Below", 'data-modal-handler' => 'Tenon.features.tenonContent.Library', 'data-modal-clone' => 'true' do
         = fa_icon('plus-circle')
         %span Below
 
