--- a/app/assets/stylesheets/tenon/ui/tenon-content-popped-out.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content-popped-out.css.scss
@@ -37,6 +37,17 @@
   }
 
   .tn-tc-wrap {
+    &.mobile-breakpoint {
+      .tn-tc-sizes {
+        a, a.tn-tc-pop-out-close {
+          display: block;
+          float: left;
+          margin-right: 5px;
+          margin-bottom: 5px;
+        }
+      }
+    }
+
     margin: 0px auto;
     width: 90%;
 
@@ -51,6 +62,7 @@
       margin-bottom: 10px;
       padding-bottom: 10px;
       border-bottom: 1px solid $tn-med-grey;
+      overflow: hidden;
 
       a {
         display: inline-block;
