--- a/app/views/tenon/item_assets/new.html.haml
+++ b/app/views/tenon/item_assets/new.html.haml
@@ -1,6 +1,6 @@
 %ul.modal-tab-links
-  %li.active.btn.btn-info.tab= link_to "Upload File", '#upload-asset', data: {toggle: 'tab'}
-  %li.btn.btn-info.tab= link_to "Asset Library", '#pick-asset', data: {toggle: 'tab'}
+  %li.active.tab= link_to "Upload File", '#upload-asset', data: {toggle: 'tab'}, class: 'btn btn-info'
+  %li.tab= link_to "Asset Library", '#pick-asset', data: {toggle: 'tab'}, class: 'btn btn-info'
   .spacer
 
 .modal-tab-pane.tab-content
