fix modal styling & remove crop button from non-image/video assets

--- a/app/assets/stylesheets/tenon/ui/quick-search.css.scss
+++ b/app/assets/stylesheets/tenon/ui/quick-search.css.scss
@@ -38,7 +38,7 @@
 input.filter {
   border: none;
   padding-left: 10px;
-  position: absolute;
+  // position: absolute;
   top: 20px;
   right: 20px;
 }
