--- a/app/assets/stylesheets/tenon/ui/tenon-content-library.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content-library.css.scss
@@ -3,6 +3,7 @@
 }
 
 .tenon-library {
+
   ul {
 
     margin: 0;
@@ -23,10 +24,21 @@
       background-color: white;
       color: white;
 
+      img {
+        width: 40px;
+      }
+
       p {
+        @include media($mobile_breakpoint) {
+          left: 80px;
+        }
+
+        @include media($tablet_breakpoint) {
+          left: 120px;
+        }
+
         position: absolute;
         top: 20px;
-        left: 120px;
         margin: 0;
         padding-right: 140px;
         width: 100%;
