new content button concept

--- a/app/assets/stylesheets/tenon/ui/quick-search.css.scss
+++ b/app/assets/stylesheets/tenon/ui/quick-search.css.scss
@@ -1,16 +1,13 @@
 .quick-search {
 
+  @include placeholder {
+    color: $tn-label;
+  }
+
+  padding-left: 20px;
   input[type=text] {
     @include transition(width 0.25s ease);
-    margin-top: 8px;
-    padding: 0;
-    width: 50px;
-    height: 50px;
-    border: none;
-    background: none;
-    color: $tn-label;
-    font-size: 12px;
-    line-height: 30px;
+    width: 70px;
 
     &:focus {
       width: 250px;
@@ -18,28 +15,15 @@
     }
   }
 
-  ::-webkit-input-placeholder {
-    color: $tn-label;
-  }
-
-  :-moz-placeholder {
-    color: $tn-label;
-  }
-
-  ::-moz-placeholder {
-    color: $tn-label;
-  }
-
-  :-ms-input-placeholder {
-    color: $tn-label;
+  i {
+    padding-right: 20px;
   }
 }
 
 input.filter {
-  border: none;
-  padding-left: 10px;
   // position: absolute;
   top: 20px;
   right: 20px;
+  padding-left: 10px;
+  border: none;
 }
-
