--- a/app/views/tenon/galleries/index.html.haml
+++ b/app/views/tenon/galleries/index.html.haml
@@ -9,6 +9,8 @@
 
     .tools
       = render "tenon/shared/section_header/quick_search", record_list: '#galleries'
+      .header-tool
+        %a{:href => new_gallery_path }= raw "#{fa_icon('th')} +"
 
   .spacer
 
