--- a/app/views/tenon/pages/index.html.haml
+++ b/app/views/tenon/pages/index.html.haml
@@ -9,6 +9,8 @@
     %h1 Pages
 
     .tools
+      .header-tool
+        %a{:href => new_page_path }= raw "#{fa_icon('file')} +"
       = render "tenon/shared/section_header/quick_search", record_list: '#pages'
 
   .spacer
