reverting a bunch of UI experiment crap that got messed up in the master branch

--- a/app/views/tenon/events/index.html.haml
+++ b/app/views/tenon/events/index.html.haml
@@ -10,8 +10,8 @@
 
     .tools
       = render "tenon/shared/section_header/quick_search", record_list: '#events'
-      .header-tool
-        %a{:href => new_event_path }= raw "#{fa_icon('calendar')} +"
+      / .header-tool
+      /   %a{:href => new_event_path }= raw "#{fa_icon('calendar')} +"
 
   .spacer
 
