--- a/app/views/tenon/banners/index.html.haml
+++ b/app/views/tenon/banners/index.html.haml
@@ -10,8 +10,8 @@
 
     .tools
       = render "tenon/shared/section_header/quick_search", record_list: '#banners'
-      .header-tool
-        %a{:href => new_banner_path }= raw "#{fa_icon('bookmark')} +"
+      / .header-tool
+      /   %a{:href => new_banner_path }= raw "#{fa_icon('bookmark')} +"
 
   .spacer
 
