--- a/app/assets/stylesheets/tenon/colors-named.css.scss
+++ b/app/assets/stylesheets/tenon/colors-named.css.scss
@@ -1,8 +1,8 @@
 // Use American 'color' in variable names for consistency with CSS keywords.
 
 // Named colors
-$tn-light-grey: #f2f2f2;
-$tn-med-grey: #e2e2e2;
+$tn-light-grey: #e2e2e2;
+$tn-med-grey: #c2c2c2;
 $tn-grey: #ababab;
 $tn-dark-grey: #878787;
 $tn-slate: #242133;
