style file upload buttons the same as 'Browse'

--- a/app/assets/stylesheets/tenon/layout/assets.css.scss
+++ b/app/assets/stylesheets/tenon/layout/assets.css.scss
@@ -62,6 +62,9 @@ form.edit_asset {
     position: relative;
     overflow: hidden;
     margin: 10px 0 0 10px;
+    padding: 5px 10px;
+    border-radius: 15px;
+    // font-size: 12px;
 
     input.upload {
       position: absolute;
