--- a/app/views/tenon/assets/_form.html.haml
+++ b/app/views/tenon/assets/_form.html.haml
@@ -7,9 +7,10 @@
         = f.text_field :title, placeholder: '--', explanation: 'Enter a title for your asset.  You can leave this blank to just use the file name as the title.  If you upload multiple assets a numerical series will be created.'
 
       .form-group
-        .fileUpload.btn.btn-primary
-          %span#choose-files Choose Files
-          %input{ :type => 'file', :class => 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
+        .browse-button-holder
+          .fileUpload.btn.btn-primary.browse
+            %span#choose-files Choose Files
+            %input{ :type => 'file', :class => 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
 
     .spacer
 
